core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/ZVC__Zoom_ZRA_Analysis__c.object-meta.xml
<CustomObject>
    <label>Zoom ZRA Analysis</label>
    <nameField>
        <displayFormat>Zoom ZRA Analysis-{0000}</displayFormat>
        <label>Zoom ZRA Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zoom ZRA Analysis</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>