core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__Account__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Zoom ZRA Analysis</relationshipLabel>
    <relationshipName>Zoom_ZRA_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>