core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__Contact__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Zoom ZRA Analysis</relationshipLabel>
    <relationshipName>Zoom_ZRA_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>