core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__Conversation_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Conversation_Start_Time__c</fullName>
    <label>Conversation Start Time</label>
    <type>DateTime</type>
</CustomField>