core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__Conversation_Title__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Conversation_Title__c</fullName>
    <description>Format: [Type][Direction]&lt;Subject&gt; - &lt;StartTime&gt;. It should show up as the main field for the object</description>
    <label>Conversation Title</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>