core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__Conversation_Type__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Conversation_Type__c</fullName>
    <label>Conversation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>