core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__Customer_Objections__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Customer_Objections__c</fullName>
    <label>Customer Objections</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>