core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__Deal_Factors__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Deal_Factors__c</fullName>
    <label>Deal Factors</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>