core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__Detailed_Summary__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Detailed_Summary__c</fullName>
    <label>Detailed Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>