core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__Duration_sec__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Duration_sec__c</fullName>
    <label>Duration (sec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>