core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__External_Participant_List__c.field-meta.xml
<CustomField>
    <fullName>ZVC__External_Participant_List__c</fullName>
    <label>External Participant List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>