core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__Features_Mentioned__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Features_Mentioned__c</fullName>
    <label>Features Mentioned</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>