core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__Filler_Words__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Filler_Words__c</fullName>
    <inlineHelpText>"words/min"</inlineHelpText>
    <label>Filler Words (words/min)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>