core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__Good_Questions__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Good_Questions__c</fullName>
    <label>Good Questions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>