core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__Internal_Participant_List__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Internal_Participant_List__c</fullName>
    <label>Internal Participant List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>