core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__IsDemo__c.field-meta.xml
<CustomField>
    <fullName>ZVC__IsDemo__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only conversations with more than a specific duration of screen sharing will be marked as completed.
You can view the duration limit in Zoom Revenue Accelerator.</inlineHelpText>
    <label>Demo</label>
    <type>Checkbox</type>
</CustomField>