core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__Language__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Language__c</fullName>
    <label>Language</label>
    <type>TextArea</type>
</CustomField>