core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__Lead__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Zoom ZRA Analysis</relationshipLabel>
    <relationshipName>Zoom_ZRA_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>