core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__Longest_Spiel__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Longest_Spiel__c</fullName>
    <inlineHelpText>Decimal eg: 11.45.  "mm.ss"</inlineHelpText>
    <label>Longest Spiel (min:sec)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>