core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Next_Steps__c</fullName>
    <description>Three types: By Reps, By Prospects, Other</description>
    <label>Next Steps</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>