core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__Patience__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Patience__c</fullName>
    <inlineHelpText>"seconds"</inlineHelpText>
    <label>Patience (secs)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>