core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__Sentiment_Score__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Sentiment_Score__c</fullName>
    <label>Sentiment Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>