core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__Talk_Listen_Ratio__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Talk_Listen_Ratio__c</fullName>
    <label>Talk-Listen Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>