core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__Talk_Speed__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Talk_Speed__c</fullName>
    <inlineHelpText>"words/min"</inlineHelpText>
    <label>Talk Speed (words/min)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>