core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__Zoom_Call_Log__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Zoom_Call_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zoom Call Log</label>
    <referenceTo>ZVC__Zoom_Call_Log__c</referenceTo>
    <relationshipLabel>Zoom ZRA Analysis</relationshipLabel>
    <relationshipName>Zoom_ZRA_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>