core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__ZRA_Conversation__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZRA_Conversation__c</fullName>
    <label>ZRA Conversation</label>
    <type>Url</type>
</CustomField>