core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__ZRA_Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZRA_Conversation_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Make Unique Identifier</description>
    <label>ZRA Conversation Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>