core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/fields/ZVC__ZRA_Deal_Timeline__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZRA_Deal_Timeline__c</fullName>
    <label>ZRA Deal Timeline</label>
    <type>Url</type>
</CustomField>