core/unpackaged/main/default/objects/ZVC__Zoom_ZRA_Analysis__c/listViews/ZVC__All.listView-meta.xml
<ListView>
    <fullName>ZVC__All</fullName>
    <columns>NAME</columns>
    <columns>ZVC__Conversation_Title__c</columns>
    <columns>ZVC__Conversation_Start_Time__c</columns>
    <columns>ZVC__Duration_sec__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>